--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -600,16 +600,16 @@ Management performance table: Table \ref{tab:mnmgt_perform}
   \hline
 Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total landings (mt) & Estimated total catch (mt) \\ 
   \hline
-\text{2007} & 900 &  & 150 & 133 & 157 \\ 
-  \text{2008} & 911 &  & 150 & 92 & 133 \\ 
-  \text{2009} & 1,160 &  & 189 & 94 & 190 \\ 
-  \text{2010} & 1,173 &  & 200 & 97 & 181 \\ 
-  \text{2011} & 1,026 & 981 & 180 & 60 & 61 \\ 
-  \text{2012} & 1,007 & 962 & 183 & 57 & 58 \\ 
-  \text{2013} & 844 & 807 & 150 & 55 & 57 \\ 
-  \text{2014} & 838 & 801 & 153 & 54 & 55 \\ 
-  \text{2015} & 842 & 805 & 158 & 58 & 59 \\ 
-  \text{2016} & 850 & 813 & 164 & 65 & 65 \\ 
+\text{2007} & - & - & 150 & 133 & 157 \\ 
+  \text{2008} & - & - & 150 & 92 & 133 \\ 
+  \text{2009} & - & - & 189 & 94 & 190 \\ 
+  \text{2010} & - & - & 200 & 97 & 181 \\ 
+  \text{2011} & - & - & 180 & 60 & 61 \\ 
+  \text{2012} & - & - & 183 & 57 & 58 \\ 
+  \text{2013} & - & - & 150 & 55 & 57 \\ 
+  \text{2014} & - & - & 153 & 54 & 55 \\ 
+  \text{2015} & - & - & 158 & 58 & 59 \\ 
+  \text{2016} & - & - & 164 & 65 & 65 \\ 
    \hline
 \end{tabular}
 }
@@ -742,7 +742,7 @@ Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\
   \hline
 Quantity & 2009 & 2010 & 2011 & 2012 & 2013 & 2014 & 2015 & 2016 & 2017 & 2018 \\ 
   \hline
-Landings (mt) & 911 & 1,160 & 1,173 & 1,026 & 1,007 & 844 & 838 & 842 & 850 & 964 \\ 
+Landings (mt) & - & - & - & - & - & - & - & - & - & - \\ 
   Total Est. Catch (mt) & 150 & 189 & 200 & 180 & 183 & 150 & 153 & 158 & 164 & 281 \\ 
   OFL (mt) & 92 & 94 & 97 & 60 & 57 & 55 & 54 & 58 & 65 &  \\ 
   ACL (mt) & 133 & 190 & 181 &  61 &  58 &  57 &  55 &  59 &  65 &  \\ 
@@ -2444,16 +2444,16 @@ Date & Area & Regulation \\
   \hline
 Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total landings (mt) & Estimated total catch (mt) \\ 
   \hline
-\text{2007} & 900 &  & 150 & 133 & 157 \\ 
-  \text{2008} & 911 &  & 150 & 92 & 133 \\ 
-  \text{2009} & 1,160 &  & 189 & 94 & 190 \\ 
-  \text{2010} & 1,173 &  & 200 & 97 & 181 \\ 
-  \text{2011} & 1,026 & 981 & 180 & 60 & 61 \\ 
-  \text{2012} & 1,007 & 962 & 183 & 57 & 58 \\ 
-  \text{2013} & 844 & 807 & 150 & 55 & 57 \\ 
-  \text{2014} & 838 & 801 & 153 & 54 & 55 \\ 
-  \text{2015} & 842 & 805 & 158 & 58 & 59 \\ 
-  \text{2016} & 850 & 813 & 164 & 65 & 65 \\ 
+\text{2007} & - & - & 150 & 133 & 157 \\ 
+  \text{2008} & - & - & 150 & 92 & 133 \\ 
+  \text{2009} & - & - & 189 & 94 & 190 \\ 
+  \text{2010} & - & - & 200 & 97 & 181 \\ 
+  \text{2011} & - & - & 180 & 60 & 61 \\ 
+  \text{2012} & - & - & 183 & 57 & 58 \\ 
+  \text{2013} & - & - & 150 & 55 & 57 \\ 
+  \text{2014} & - & - & 153 & 54 & 55 \\ 
+  \text{2015} & - & - & 158 & 58 & 59 \\ 
+  \text{2016} & - & - & 164 & 65 & 65 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -3016,106 +3016,106 @@ Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  \\
 \endfoot 
 \endlastfoot 
  \hline
-NatM\_p\_1\_Fem\_GP\_1 & 0.05 & -5 & (0.02, 0.1) &  &  & Log\_Norm (-2.92, 0.44) \\ 
-  L\_at\_Amin\_Fem\_GP\_1 & 20.78 & 3 & (15, 25) & OK & 0.14 & None \\ 
-  L\_at\_Amax\_Fem\_GP\_1 & 41.60 & 2 & (35, 45) & OK & 0.15 & None \\ 
-  VonBert\_K\_Fem\_GP\_1 & 0.17 & 3 & (0.1, 0.4) & OK & 0.00 & None \\ 
-  CV\_young\_Fem\_GP\_1 & 1.34 & 5 & (0.03, 5) & OK & 0.06 & None \\ 
-  CV\_old\_Fem\_GP\_1 & 2.56 & 5 & (0.03, 5) & OK & 0.12 & None \\ 
-  Wtlen\_1\_Fem & 0.00 & -99 & (0, 3) &  &  & None \\ 
-  Wtlen\_2\_Fem & 3.09 & -99 & (2, 4) &  &  & None \\ 
-  Mat50\%\_Fem & 32.10 & -99 & (20, 40) &  &  & None \\ 
-  Mat\_slope\_Fem & -1.00 & -99 & (-2, 4) &  &  & None \\ 
-  Eggs\_scalar\_Fem & 0.00 & -99 & (0, 6) &  &  & None \\ 
-  Eggs\_exp\_len\_Fem & 4.98 & -99 & (-3, 5) &  &  & None \\ 
-  NatM\_p\_1\_Mal\_GP\_1 & 0.05 & -5 & (0, 0.3) &  &  & Normal (0.05, 0.1) \\ 
-  L\_at\_Amin\_Mal\_GP\_1 & 20.78 & -2 & (6, 68) &  &  & None \\ 
-  L\_at\_Amax\_Mal\_GP\_1 & 38.90 & 2 & (13, 122) & OK & 0.00 & None \\ 
-  VonBert\_K\_Mal\_GP\_1 & 0.20 & 3 & (0.04, 1.09) & OK & 0.03 & None \\ 
-  CV\_young\_Mal\_GP\_1 & 1.34 & -5 & (0, 742.07) &  &  & None \\ 
-  CV\_old\_Mal\_GP\_1 & 2.29 & 5 & (0, 742.07) & OK & 0.06 & None \\ 
-  Wtlen\_1\_Mal & 0.00 & -99 & (0, 3) &  &  & None \\ 
-  Wtlen\_2\_Mal & 3.08 & -99 & (2, 4) &  &  & None \\ 
-  CohortGrowDev & 1.00 & -99 & (0, 2) &  &  & None \\ 
-  FracFemale\_GP\_1 & 0.50 & -99 & (0.01, 0.99) &  &  & None \\ 
-  SR\_LN(R0) & 9.36 & 1 & (5, 20) & OK & 0.14 & None \\ 
-  SR\_BH\_steep & 0.50 & -2 & (0.2, 1) &  &  & Full\_Beta (0.72, 0.15) \\ 
-  SR\_sigmaR & 0.70 & -6 & (0.5, 1.2) &  &  & None \\ 
-  SR\_regime & 0.00 & -99 & (-5, 5) &  &  & None \\ 
-  SR\_autocorr & 0.00 & -99 & (0, 2) &  &  & None \\ 
-  Early\_InitAge\_18 & 0.00 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_17 & 0.00 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_16 & 0.00 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_15 & 0.00 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_14 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_13 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_12 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_11 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_10 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_9 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_8 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_7 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_6 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_5 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_4 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_3 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_2 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  Early\_InitAge\_1 & 0.01 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
-  LnQ\_base\_Fishery(1) & -12.31 & -1 & (-15, 15) &  &  & None \\ 
-  LnQ\_base\_POP(4) & -0.12 & -1 & (-15, 15) &  &  & None \\ 
-  LnQ\_base\_Triennial(5) & -1.83 & -1 & (-15, 15) &  &  & None \\ 
-  Q\_extraSD\_Triennial(5) & 0.39 & 2 & (0, 0.5) & OK & 0.15 & None \\ 
-  LnQ\_base\_AFSCSlope(6) & -2.49 & -1 & (-15, 15) &  &  & None \\ 
-  LnQ\_base\_NWFSCSlope(7) & -2.85 & -1 & (-15, 15) &  &  & None \\ 
-  LnQ\_base\_NWFSCcombo(8) & -2.62 & -1 & (-15, 15) &  &  & None \\ 
-  Q\_extraSD\_NWFSCcombo(8) & 0.03 & 2 & (0, 0.5) & OK & 0.07 & None \\ 
-  SizeSel\_P1\_Fishery(1) & 37.96 & 1 & (20, 45) & OK & 0.18 & None \\ 
-  SizeSel\_P2\_Fishery(1) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_Fishery(1) & 3.68 & 3 & (-1, 9) & OK & 0.13 & None \\ 
+NatM\_p\_1\_Fem\_GP\_1 & 0.054 & -5 & (0.02, 0.1) &  &  & Log\_Norm (-2.92, 0.44) \\ 
+  L\_at\_Amin\_Fem\_GP\_1 & 20.7848 & 3 & (15, 25) & OK & 0.14 & None \\ 
+  L\_at\_Amax\_Fem\_GP\_1 & 41.5953 & 2 & (35, 45) & OK & 0.15 & None \\ 
+  VonBert\_K\_Fem\_GP\_1 & 0.167029 & 3 & (0.1, 0.4) & OK & 0.00 & None \\ 
+  SD\_young\_Fem\_GP\_1 & 1.34323 & 5 & (0.03, 5) & OK & 0.06 & None \\ 
+  SD\_old\_Fem\_GP\_1 & 2.5618 & 5 & (0.03, 5) & OK & 0.12 & None \\ 
+  Wtlen\_1\_Fem & 1.044e-05 & -99 & (0, 3) &  &  & None \\ 
+  Wtlen\_2\_Fem & 3.088 & -99 & (2, 4) &  &  & None \\ 
+  Mat50\%\_Fem & 32.1 & -99 & (20, 40) &  &  & None \\ 
+  Mat\_slope\_Fem & -1 & -99 & (-2, 4) &  &  & None \\ 
+  Eggs\_scalar\_Fem & 8.66e-10 & -99 & (0, 6) &  &  & None \\ 
+  Eggs\_exp\_len\_Fem & 4.9767 & -99 & (-3, 5) &  &  & None \\ 
+  NatM\_p\_1\_Mal\_GP\_1 & 0.054 & -5 & (0, 0.3) &  &  & Normal (0.05, 0.1) \\ 
+  L\_at\_Amin\_Mal\_GP\_1 & 20.7848 & -2 & (6, 68) &  &  & None \\ 
+  L\_at\_Amax\_Mal\_GP\_1 & 38.8999 & 2 & (13, 122) & OK & 0.00 & None \\ 
+  VonBert\_K\_Mal\_GP\_1 & 0.199 & 3 & (0.04, 1.09) & OK & 0.03 & None \\ 
+  SD\_young\_Mal\_GP\_1 & 1.34323 & -5 & (0, 742.07) &  &  & None \\ 
+  SD\_old\_Mal\_GP\_1 & 2.287 & 5 & (0, 742.07) & OK & 0.06 & None \\ 
+  Wtlen\_1\_Mal & 1.05e-05 & -99 & (0, 3) &  &  & None \\ 
+  Wtlen\_2\_Mal & 3.083 & -99 & (2, 4) &  &  & None \\ 
+  CohortGrowDev & 1 & -99 & (0, 2) &  &  & None \\ 
+  FracFemale\_GP\_1 & 0.5 & -99 & (0.01, 0.99) &  &  & None \\ 
+  SR\_LN(R0) & 9.36441 & 1 & (5, 20) & OK & 0.14 & None \\ 
+  SR\_BH\_steep & 0.5 & -2 & (0.2, 1) &  &  & Full\_Beta (0.72, 0.15) \\ 
+  SR\_sigmaR & 0.7 & -6 & (0.5, 1.2) &  &  & None \\ 
+  SR\_regime & 0 & -99 & (-5, 5) &  &  & None \\ 
+  SR\_autocorr & 0 & -99 & (0, 2) &  &  & None \\ 
+  Early\_InitAge\_18 & 0.00423169 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_17 & 0.00444885 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_16 & 0.00467384 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_15 & 0.00490632 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_14 & 0.00514567 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_13 & 0.00539119 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_12 & 0.00564178 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_11 & 0.0058963 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_10 & 0.00615286 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_9 & 0.00640947 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_8 & 0.006662 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_7 & 0.00690763 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_6 & 0.00714936 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_5 & 0.00739472 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_4 & 0.0076478 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_3 & 0.00790868 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_2 & 0.00817704 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  Early\_InitAge\_1 & 0.00845291 & 3 & (-6, 6) & act & 0.70 & dev (NA, NA) \\ 
+  LnQ\_base\_Fishery(1) & -12.313 & -1 & (-15, 15) &  &  & None \\ 
+  LnQ\_base\_POP(4) & -0.122911 & -1 & (-15, 15) &  &  & None \\ 
+  LnQ\_base\_Triennial(5) & -1.82534 & -1 & (-15, 15) &  &  & None \\ 
+  Q\_extraSD\_Triennial(5) & 0.390454 & 2 & (0, 0.5) & OK & 0.15 & None \\ 
+  LnQ\_base\_AFSCSlope(6) & -2.48805 & -1 & (-15, 15) &  &  & None \\ 
+  LnQ\_base\_NWFSCSlope(7) & -2.84895 & -1 & (-15, 15) &  &  & None \\ 
+  LnQ\_base\_NWFSCcombo(8) & -2.62228 & -1 & (-15, 15) &  &  & None \\ 
+  Q\_extraSD\_NWFSCcombo(8) & 0.029722 & 2 & (0, 0.5) & OK & 0.07 & None \\ 
+  SizeSel\_P1\_Fishery(1) & 37.9626 & 1 & (20, 45) & OK & 0.18 & None \\ 
+  SizeSel\_P2\_Fishery(1) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_Fishery(1) & 3.67946 & 3 & (-1, 9) & OK & 0.13 & None \\ 
   SizeSel\_P4\_Fishery(1) & -1.65 & -3 & (-9, 9) &  &  & None \\ 
-  SizeSel\_P5\_Fishery(1) & -3.50 & -4 & (-5, 9) &  &  & None \\ 
-  SizeSel\_P6\_Fishery(1) & 0.50 & 2 & (-5, 9) & OK & 0.31 & None \\ 
-  Retain\_P1\_Fishery(1) & 28.28 & 1 & (15, 45) & OK & 0.34 & None \\ 
-  Retain\_P2\_Fishery(1) & 1.08 & 1 & (0.1, 10) & OK & 0.13 & None \\ 
-  Retain\_P3\_Fishery(1) & 6.97 & 1 & (-10, 10) & OK & 1.36 & None \\ 
-  Retain\_P4\_Fishery(1) & 0.00 & -3 & (0, 0) &  &  & None \\ 
-  SizeSel\_P1\_ASHOP(2) & 49.49 & 1 & (20, 49.5) & HI & 0.16 & None \\ 
-  SizeSel\_P2\_ASHOP(2) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_ASHOP(2) & 5.06 & 3 & (-1, 9) & OK & 0.18 & None \\ 
-  SizeSel\_P4\_ASHOP(2) & 1.00 & -3 & (-1, 9) &  &  & None \\ 
+  SizeSel\_P5\_Fishery(1) & -3.5 & -4 & (-5, 9) &  &  & None \\ 
+  SizeSel\_P6\_Fishery(1) & 0.496266 & 2 & (-5, 9) & OK & 0.31 & None \\ 
+  Retain\_P1\_Fishery(1) & 28.2834 & 1 & (15, 45) & OK & 0.34 & None \\ 
+  Retain\_P2\_Fishery(1) & 1.07725 & 1 & (0.1, 10) & OK & 0.13 & None \\ 
+  Retain\_P3\_Fishery(1) & 6.97035 & 1 & (-10, 10) & OK & 1.36 & None \\ 
+  Retain\_P4\_Fishery(1) & 0 & -3 & (0, 0) &  &  & None \\ 
+  SizeSel\_P1\_ASHOP(2) & 49.495 & 1 & (20, 49.5) & HI & 0.16 & None \\ 
+  SizeSel\_P2\_ASHOP(2) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_ASHOP(2) & 5.06196 & 3 & (-1, 9) & OK & 0.18 & None \\ 
+  SizeSel\_P4\_ASHOP(2) & 1 & -3 & (-1, 9) &  &  & None \\ 
   SizeSel\_P5\_ASHOP(2) & -4.35 & -4 & (-9, 9) &  &  & None \\ 
-  SizeSel\_P6\_ASHOP(2) & 999.00 & -2 & (-5, 999) &  &  & None \\ 
-  SizeSel\_P1\_POP(4) & 24.47 & 1 & (20, 70) & OK & 2.24 & None \\ 
-  SizeSel\_P2\_POP(4) & 11.17 & 3 & (0.001, 50) & OK & 4.04 & None \\ 
-  SizeSel\_P1\_Triennial(5) & 27.64 & 1 & (20, 45) & OK & 5.03 & None \\ 
-  SizeSel\_P2\_Triennial(5) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_Triennial(5) & 5.50 & -3 & (-1, 9) &  &  & None \\ 
-  SizeSel\_P4\_Triennial(5) & 3.30 & 3 & (-1, 9) & OK & 2.29 & None \\ 
-  SizeSel\_P5\_Triennial(5) & -5.00 & -4 & (-5, 9) &  &  & None \\ 
-  SizeSel\_P6\_Triennial(5) & -0.78 & 2 & (-5, 9) & OK & 0.64 & None \\ 
-  SizeSel\_P1\_AFSCSlope(6) & 21.70 & 1 & (20, 45) & OK & 6.45 & None \\ 
-  SizeSel\_P2\_AFSCSlope(6) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_AFSCSlope(6) & 1.24 & 3 & (-1, 9) & OK & 6.47 & None \\ 
-  SizeSel\_P4\_AFSCSlope(6) & 1.00 & -3 & (-1, 9) &  &  & None \\ 
-  SizeSel\_P5\_AFSCSlope(6) & -9.00 & -4 & (-9, 9) &  &  & None \\ 
-  SizeSel\_P6\_AFSCSlope(6) & 999.00 & -2 & (-5, 999) &  &  & None \\ 
-  SizeSel\_P1\_NWFSCSlope(7) & 35.96 & 1 & (20, 45) & OK & 2.22 & None \\ 
-  SizeSel\_P2\_NWFSCSlope(7) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_NWFSCSlope(7) & 1.78 & 3 & (-1, 9) & OK & 1.85 & None \\ 
-  SizeSel\_P4\_NWFSCSlope(7) & 1.00 & -3 & (-1, 9) &  &  & None \\ 
-  SizeSel\_P5\_NWFSCSlope(7) & -9.00 & -4 & (-9, 9) &  &  & None \\ 
-  SizeSel\_P6\_NWFSCSlope(7) & 999.00 & -2 & (-5, 999) &  &  & None \\ 
-  SizeSel\_P1\_NWFSCcombo(8) & 21.35 & 1 & (18, 49.5) & OK & 5.84 & None \\ 
-  SizeSel\_P2\_NWFSCcombo(8) & -5.00 & -2 & (-6, 4) &  &  & None \\ 
-  SizeSel\_P3\_NWFSCcombo(8) & 2.86 & 3 & (-1, 9) & OK & 3.06 & None \\ 
-  SizeSel\_P4\_NWFSCcombo(8) & 1.00 & -3 & (-1, 9) &  &  & None \\ 
-  SizeSel\_P5\_NWFSCcombo(8) & -9.00 & -4 & (-9, 9) &  &  & None \\ 
-  SizeSel\_P6\_NWFSCcombo(8) & 999.00 & -2 & (-5, 999) &  &  & None \\ 
-  Retain\_P3\_Fishery(1)\_BLK1repl\_1918 & 3.98 & 4 & (-10, 10) & OK & 0.09 & None \\ 
-  Retain\_P3\_Fishery(1)\_BLK1repl\_1992 & 2.30 & 4 & (-10, 10) & OK & 0.37 & None \\ 
-  Retain\_P3\_Fishery(1)\_BLK1repl\_2002 & 1.72 & 4 & (-10, 10) & OK & 0.12 & None \\ 
-  Retain\_P3\_Fishery(1)\_BLK1repl\_2008 & 0.61 & 4 & (-10, 10) & OK & 0.28 & None \\ 
-  Retain\_P3\_Fishery(1)\_BLK1repl\_2009 & -0.02 & 4 & (-10, 10) & OK & 0.24 & None \\ 
+  SizeSel\_P6\_ASHOP(2) & 999 & -2 & (-5, 999) &  &  & None \\ 
+  SizeSel\_P1\_POP(4) & 24.4703 & 1 & (20, 70) & OK & 2.24 & None \\ 
+  SizeSel\_P2\_POP(4) & 11.1655 & 3 & (0.001, 50) & OK & 4.04 & None \\ 
+  SizeSel\_P1\_Triennial(5) & 27.6389 & 1 & (20, 45) & OK & 5.03 & None \\ 
+  SizeSel\_P2\_Triennial(5) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_Triennial(5) & 5.5 & -3 & (-1, 9) &  &  & None \\ 
+  SizeSel\_P4\_Triennial(5) & 3.297 & 3 & (-1, 9) & OK & 2.29 & None \\ 
+  SizeSel\_P5\_Triennial(5) & -5 & -4 & (-5, 9) &  &  & None \\ 
+  SizeSel\_P6\_Triennial(5) & -0.782413 & 2 & (-5, 9) & OK & 0.64 & None \\ 
+  SizeSel\_P1\_AFSCSlope(6) & 21.7007 & 1 & (20, 45) & OK & 6.45 & None \\ 
+  SizeSel\_P2\_AFSCSlope(6) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_AFSCSlope(6) & 1.23847 & 3 & (-1, 9) & OK & 6.47 & None \\ 
+  SizeSel\_P4\_AFSCSlope(6) & 1 & -3 & (-1, 9) &  &  & None \\ 
+  SizeSel\_P5\_AFSCSlope(6) & -9 & -4 & (-9, 9) &  &  & None \\ 
+  SizeSel\_P6\_AFSCSlope(6) & 999 & -2 & (-5, 999) &  &  & None \\ 
+  SizeSel\_P1\_NWFSCSlope(7) & 35.9583 & 1 & (20, 45) & OK & 2.22 & None \\ 
+  SizeSel\_P2\_NWFSCSlope(7) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_NWFSCSlope(7) & 1.77694 & 3 & (-1, 9) & OK & 1.85 & None \\ 
+  SizeSel\_P4\_NWFSCSlope(7) & 1 & -3 & (-1, 9) &  &  & None \\ 
+  SizeSel\_P5\_NWFSCSlope(7) & -9 & -4 & (-9, 9) &  &  & None \\ 
+  SizeSel\_P6\_NWFSCSlope(7) & 999 & -2 & (-5, 999) &  &  & None \\ 
+  SizeSel\_P1\_NWFSCcombo(8) & 21.3537 & 1 & (18, 49.5) & OK & 5.84 & None \\ 
+  SizeSel\_P2\_NWFSCcombo(8) & -5 & -2 & (-6, 4) &  &  & None \\ 
+  SizeSel\_P3\_NWFSCcombo(8) & 2.86381 & 3 & (-1, 9) & OK & 3.06 & None \\ 
+  SizeSel\_P4\_NWFSCcombo(8) & 1 & -3 & (-1, 9) &  &  & None \\ 
+  SizeSel\_P5\_NWFSCcombo(8) & -9 & -4 & (-9, 9) &  &  & None \\ 
+  SizeSel\_P6\_NWFSCcombo(8) & 999 & -2 & (-5, 999) &  &  & None \\ 
+  Retain\_P3\_Fishery(1)\_BLK1repl\_1918 & 3.98279 & 4 & (-10, 10) & OK & 0.09 & None \\ 
+  Retain\_P3\_Fishery(1)\_BLK1repl\_1992 & 2.30477 & 4 & (-10, 10) & OK & 0.37 & None \\ 
+  Retain\_P3\_Fishery(1)\_BLK1repl\_2002 & 1.71753 & 4 & (-10, 10) & OK & 0.12 & None \\ 
+  Retain\_P3\_Fishery(1)\_BLK1repl\_2008 & 0.608476 & 4 & (-10, 10) & OK & 0.28 & None \\ 
+  Retain\_P3\_Fishery(1)\_BLK1repl\_2009 & -0.0174503 & 4 & (-10, 10) & OK & 0.24 & None \\ 
    \hline
 \hline
 \label{tab:model_params}
@@ -3187,37 +3187,37 @@ Unfished spawning output (million eggs) & 6633.1 &   4736.7 -   8529.5 \\
 \caption{Sensitivity of the base model} 
 \label{tab:Sensitivity1}
 \scalebox{0.9}{
-\begin{tabular}{l>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}}
+\begin{tabular}{l>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}}
   \hline
-Label & Base & Harmonic weights & Steepness at prior & Estimate M & Old Maturity \\ 
+Label & Base & Harmonic weights & Steepness at prior & Estimate M & Old Maturity & NA \\ 
   \hline
-Total Likelihood & 1726.16 & 2432.50 & 1726.05 & 1725.66 & 1726.17 \\ 
-  Survey Likelihood & -25.51 & -25.88 & -24.99 & -25.68 & -25.52 \\ 
-  Discard Likelihood & -34.22 & -27.17 & -34.28 & -34.29 & -34.22 \\ 
-  Length Likelihood & 135.74 & 748.49 & 136.05 & 135.75 & 135.74 \\ 
-  Age Likelihood & 1636.59 & 1717.85 & 1636.26 & 1636.59 & 1636.62 \\ 
-  Recruitment Likelihood & 12.54 & 18.20 & 12.87 & 12.34 & 12.54 \\ 
-  Forecast Recruitment Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
-  Parameter Priors Likelihood & 1.00 & 1.00 & 0.13 & 0.94 & 1.00 \\ 
-  Parameter Deviation Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
-  log(R0) & 9.36 & 9.27 & 9.41 & 9.74 & 9.36 \\ 
-  SB Virgin & 6633.08 & 6136.91 & 6979.48 & 7885.80 & 6505.70 \\ 
-  SB 2017 & 5047.16 & 4199.96 & 6883.61 & 7436.66 & 5070.80 \\ 
-  Depletion 2017 & 0.76 & 0.68 & 0.99 & 0.94 & 0.78 \\ 
-  Total Yield & 1764.80 & 1605.33 & 2482.46 & 2329.27 & 1759.53 \\ 
-  Steepness & 0.50 & 0.50 & 0.72 & 0.50 & 0.50 \\ 
-  Natural Mortality - Female & 0.05 & 0.05 & 0.05 & 0.06 & 0.05 \\ 
-  Length at Amin - Female & 20.78 & 20.87 & 20.79 & 20.78 & 20.78 \\ 
-  Length at Amax - Female & 41.60 & 41.72 & 41.61 & 41.61 & 41.60 \\ 
-  Von Bert. k - Female & 0.17 & 0.17 & 0.17 & 0.17 & 0.17 \\ 
-  SD young - Female & 1.34 & 1.35 & 1.34 & 1.34 & 1.34 \\ 
-  SD old - Female & 2.56 & 2.76 & 2.56 & 2.56 & 2.56 \\ 
-  Natural Mortality - Male & 0.05 & 0.05 & 0.05 & 0.06 & 0.05 \\ 
-  Length at Amin - Male & 20.78 & 20.87 & 20.79 & 20.78 & 20.78 \\ 
-  Length at Amax - Male & 38.90 & 38.91 & 38.91 & 38.90 & 38.90 \\ 
-  Von Bert. k - Male & 0.20 & 0.20 & 0.20 & 0.20 & 0.20 \\ 
-  SD young - Male & 1.34 & 1.35 & 1.34 & 1.34 & 1.34 \\ 
-  SD old - Male & 2.29 & 2.60 & 2.29 & 2.29 & 2.29 \\ 
+Total Likelihood & 1726.16 & 2432.50 & 1726.05 & 1725.66 & 1726.17 & 1726.18 \\ 
+  Survey Likelihood & -25.51 & -25.88 & -24.99 & -25.68 & -25.52 & -25.49 \\ 
+  Discard Likelihood & -34.22 & -27.17 & -34.28 & -34.29 & -34.22 & -34.22 \\ 
+  Length Likelihood & 135.74 & 748.49 & 136.05 & 135.75 & 135.74 & 135.75 \\ 
+  Age Likelihood & 1636.59 & 1717.85 & 1636.26 & 1636.59 & 1636.62 & 1636.58 \\ 
+  Recruitment Likelihood & 12.54 & 18.20 & 12.87 & 12.34 & 12.54 & 12.54 \\ 
+  Forecast Recruitment Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  Parameter Priors Likelihood & 1.00 & 1.00 & 0.13 & 0.94 & 1.00 & 1.00 \\ 
+  Parameter Deviation Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  log(R0) & 9.36 & 9.27 & 9.41 & 9.74 & 9.36 & 9.37 \\ 
+  SB Virgin & 6633.08 & 6136.91 & 6979.48 & 7885.80 & 6505.70 & 7745.48 \\ 
+  SB 2017 & 5047.16 & 4199.96 & 6883.61 & 7436.66 & 5070.80 & 6103.65 \\ 
+  Depletion 2017 & 0.76 & 0.68 & 0.99 & 0.94 & 0.78 & 0.79 \\ 
+  Total Yield & 1764.80 & 1605.33 & 2482.46 & 2329.27 & 1759.53 & 1788.51 \\ 
+  Steepness & 0.50 & 0.50 & 0.72 & 0.50 & 0.50 & 0.50 \\ 
+  Natural Mortality - Female & 0.05 & 0.05 & 0.05 & 0.06 & 0.05 & 0.05 \\ 
+  Length at Amin - Female & 20.78 & 20.87 & 20.79 & 20.78 & 20.78 & 20.78 \\ 
+  Length at Amax - Female & 41.60 & 41.72 & 41.61 & 41.61 & 41.60 & 41.60 \\ 
+  Von Bert. k - Female & 0.17 & 0.17 & 0.17 & 0.17 & 0.17 & 0.17 \\ 
+  SD young - Female & 1.34 & 1.35 & 1.34 & 1.34 & 1.34 & 1.34 \\ 
+  SD old - Female & 2.56 & 2.76 & 2.56 & 2.56 & 2.56 & 2.56 \\ 
+  Natural Mortality - Male & 0.05 & 0.05 & 0.05 & 0.06 & 0.05 & 0.05 \\ 
+  Length at Amin - Male & 20.78 & 20.87 & 20.79 & 20.78 & 20.78 & 20.78 \\ 
+  Length at Amax - Male & 38.90 & 38.91 & 38.91 & 38.90 & 38.90 & 38.90 \\ 
+  Von Bert. k - Male & 0.20 & 0.20 & 0.20 & 0.20 & 0.20 & 0.20 \\ 
+  SD young - Male & 1.34 & 1.35 & 1.34 & 1.34 & 1.34 & 1.34 \\ 
+  SD old - Male & 2.29 & 2.60 & 2.29 & 2.29 & 2.29 & 2.29 \\ 
    \hline
 \end{tabular}
 }
@@ -3234,20 +3234,20 @@ Total Likelihood & 1726.16 & 2432.50 & 1726.05 & 1725.66 & 1726.17 \\
   \hline
 Label & Base & Split Triennial & Remove CPUE & Canadian Data & WA Research Lengths & OR Special Projects \\ 
   \hline
-Total Likelihood & 1726.16 & 1724.43 & 1738.84 & 1829.66 & 1747.71 & 1793.59 \\ 
-  Survey Likelihood & -25.51 & -27.89 & -12.72 & -25.85 & -26.03 & -26.02 \\ 
-  Discard Likelihood & -34.22 & -34.22 & -34.21 & -33.27 & -34.17 & -34.27 \\ 
+Total Likelihood & 1726.16 & 1724.43 & 1738.84 & 1829.64 & 1747.71 & 1793.59 \\ 
+  Survey Likelihood & -25.51 & -27.89 & -12.72 & -25.91 & -26.03 & -26.02 \\ 
+  Discard Likelihood & -34.22 & -34.22 & -34.21 & -33.26 & -34.17 & -34.27 \\ 
   Length Likelihood & 135.74 & 135.54 & 135.66 & 184.34 & 156.08 & 166.78 \\ 
-  Age Likelihood & 1636.59 & 1637.33 & 1636.69 & 1690.28 & 1637.74 & 1671.26 \\ 
+  Age Likelihood & 1636.59 & 1637.33 & 1636.69 & 1690.33 & 1637.74 & 1671.26 \\ 
   Recruitment Likelihood & 12.54 & 12.65 & 12.40 & 13.13 & 13.08 & 14.81 \\ 
   Forecast Recruitment Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
   Parameter Priors Likelihood & 1.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00 \\ 
   Parameter Deviation Likelihood & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
   log(R0) & 9.36 & 9.40 & 9.36 & 9.36 & 9.33 & 9.28 \\ 
-  SB Virgin & 6633.08 & 6884.08 & 6594.29 & 6687.07 & 6356.26 & 6128.38 \\ 
-  SB 2017 & 5047.16 & 5434.58 & 4992.37 & 4757.21 & 4673.44 & 4392.80 \\ 
-  Depletion 2017 & 0.76 & 0.79 & 0.76 & 0.71 & 0.74 & 0.72 \\ 
-  Total Yield & 1764.80 & 1830.92 & 1754.69 & 1773.31 & 1705.62 & 1626.60 \\ 
+  SB Virgin & 6633.08 & 6884.08 & 6594.29 & 6700.11 & 6356.26 & 6128.38 \\ 
+  SB 2017 & 5047.16 & 5434.58 & 4992.37 & 4716.26 & 4673.44 & 4392.80 \\ 
+  Depletion 2017 & 0.76 & 0.79 & 0.76 & 0.70 & 0.74 & 0.72 \\ 
+  Total Yield & 1764.80 & 1830.92 & 1754.69 & 1777.27 & 1705.62 & 1626.60 \\ 
   Steepness & 0.50 & 0.50 & 0.50 & 0.50 & 0.50 & 0.50 \\ 
   Natural Mortality - Female & 0.05 & 0.05 & 0.05 & 0.05 & 0.05 & 0.05 \\ 
   Length at Amin - Female & 20.78 & 20.78 & 20.78 & 20.75 & 20.77 & 20.80 \\ 
@@ -3449,7 +3449,7 @@ Year & OFL (mt) & ACL (mt) & Age 3+ biomass (mt) & Spawning Output & Depletion \
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/POP_index_data.png}
+\includegraphics{Figures/Index_Data.png}
 \caption{Fishery-dependent and fishery-independent indices for Pacific
 ocean perch. \label{fig:indices}}
 \end{figure}
@@ -3794,7 +3794,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8: Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.9951
-(0.6717\_1.7889) For more info, see Francis, R.I.C.C. (2011). Data
+(0.6654\_1.8149) For more info, see Francis, R.I.C.C. (2011). Data
 weighting in statistical fisheries stock assessment models. Can. J.
 Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
@@ -3850,7 +3850,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8: Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.9951
-(0.6641\_1.7332) For more info, see Francis, R.I.C.C. (2011). Data
+(0.6685\_1.8165) For more info, see Francis, R.I.C.C. (2011). Data
 weighting in statistical fisheries stock assessment models. Can. J.
 Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_11_comp_lenfit_data_weighting_TA1.8_Fishery}}
@@ -3884,7 +3884,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_At-sea hake.png}
 \caption{Francis data weighting method TA1.8: At\_sea hake Suggested
 sample size adjustment (with 95\% interval) for len data from At\_sea
-hake: 1.0115 (0.5174\_4.5976) For more info, see Francis, R.I.C.C.
+hake: 1.0115 (0.5352\_4.8582) For more info, see Francis, R.I.C.C.
 (2011). Data weighting in statistical fisheries stock assessment models.
 Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_15_comp_lenfit_data_weighting_TA1.8_At-sea hake}}
@@ -3953,7 +3953,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Triennial survey.png}
 \caption{Francis data weighting method TA1.8: Triennial survey Suggested
 sample size adjustment (with 95\% interval) for len data from Triennial
-survey: 1.0004 (0.5531\_6.1809) For more info, see Francis, R.I.C.C.
+survey: 1.0004 (0.5362\_5.786) For more info, see Francis, R.I.C.C.
 (2011). Data weighting in statistical fisheries stock assessment models.
 Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_23_comp_lenfit_data_weighting_TA1.8_Triennial survey}}
@@ -3987,7 +3987,7 @@ survey \label{fig:mod1_26_comp_lenfit_sampsize_flt6mkt0}}
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_AFSC slope survey.png}
 \caption{Francis data weighting method TA1.8: AFSC slope survey
 Suggested sample size adjustment (with 95\% interval) for len data from
-AFSC slope survey: 1.0151 (0.5934\_22.3848) For more info, see Francis,
+AFSC slope survey: 1.0151 (0.5859\_16.7225) For more info, see Francis,
 R.I.C.C. (2011). Data weighting in statistical fisheries stock
 assessment models. Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_27_comp_lenfit_data_weighting_TA1.8_AFSC slope survey}}
@@ -4056,7 +4056,7 @@ shelf\_slope survey \label{fig:mod1_34_comp_lenfit_sampsize_flt8mkt0}}
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_NWFSC shelf-slope survey.png}
 \caption{Francis data weighting method TA1.8: NWFSC shelf\_slope survey
 Suggested sample size adjustment (with 95\% interval) for len data from
-NWFSC shelf\_slope survey: 1.0055 (0.5865\_3.8836) For more info, see
+NWFSC shelf\_slope survey: 1.0055 (0.6199\_4.021) For more info, see
 Francis, R.I.C.C. (2011). Data weighting in statistical fisheries stock
 assessment models. Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_35_comp_lenfit_data_weighting_TA1.8_NWFSC shelf-slope survey}}
@@ -4108,7 +4108,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_agefit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8: Fishery Suggested sample
 size adjustment (with 95\% interval) for age data from Fishery: 0.9921
-(0.6443\_1.9072) For more info, see Francis, R.I.C.C. (2011). Data
+(0.6365\_1.9959) For more info, see Francis, R.I.C.C. (2011). Data
 weighting in statistical fisheries stock assessment models. Can. J.
 Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_5_comp_agefit_data_weighting_TA1.8_Fishery}}
@@ -4142,7 +4142,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_agefit_data_weighting_TA1.8_At-sea hake.png}
 \caption{Francis data weighting method TA1.8: At\_sea hake Suggested
 sample size adjustment (with 95\% interval) for age data from At\_sea
-hake: 0.9921 (0.6619\_1420.3157) For more info, see Francis, R.I.C.C.
+hake: 0.9921 (0.6459\_1420.3157) For more info, see Francis, R.I.C.C.
 (2011). Data weighting in statistical fisheries stock assessment models.
 Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_9_comp_agefit_data_weighting_TA1.8_At-sea hake}}
@@ -4210,7 +4210,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_agefit_data_weighting_TA1.8_Triennial survey.png}
 \caption{Francis data weighting method TA1.8: Triennial survey Suggested
 sample size adjustment (with 95\% interval) for age data from Triennial
-survey: 1.0019 (0.648\_5.8026) For more info, see Francis, R.I.C.C.
+survey: 1.0019 (0.6421\_5.1354) For more info, see Francis, R.I.C.C.
 (2011). Data weighting in statistical fisheries stock assessment models.
 Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_17_comp_agefit_data_weighting_TA1.8_Triennial survey}}
@@ -4298,7 +4298,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \caption{Francis data weighting method TA1.8 for conditional age
 \url{data:NWFSC} shelf\_slope survey Suggested sample size
 adjustment(with 95\% interval) forconditional age\_at\_length data from
-NWFSC shelf\_slope survey: 1.0131 (0.5772\_2.8579) For more info, see
+NWFSC shelf\_slope survey: 1.0131 (0.5851\_3.0487) For more info, see
 Francis, R.I.C.C. (2011). Data weighting in statistical fisheries stock
 assessment models. Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 \label{fig:mod1_3_comp_condAALfit_data_weighting_TA1.8_condAgeNWFSC shelf-slope survey}}
