--- a/7_Tables.Rmd
+++ b/7_Tables.Rmd
@@ -1002,6 +1002,7 @@ print(jitter.table,
                                   "Max","Status","Parm_StDev",
                                   "Pr_type","Prior","Pr_SD"))]  
 
+  mod_params[,'Value'] = as.numeric(mod_params[,'Value'])
 # Convert values is males are estimated as an offset from females
   if (parm.offset == TRUE){
     convert = c('Value', 'Min', 'Max')
@@ -1017,7 +1018,8 @@ print(jitter.table,
       exp(mod_params[mod_params$Label == 'CV_young_Mal_GP_1', convert])
     mod_params[mod_params$Label == 'CV_old_Mal_GP_1',convert] = mod_params[mod_params$Label == 'CV_old_Fem_GP_1',convert] * 
       exp(mod_params[mod_params$Label == 'CV_old_Mal_GP_1', convert])
-  
+    
+    
     convert = c('Min', 'Max')
     mod_params[mod_params$Label == 'NatM_p_1_Mal_GP_1',convert]  = round(mod_params[mod_params$Label == 'NatM_p_1_Mal_GP_1', convert], digits = 1)
     mod_params[mod_params$Label == 'L_at_Amin_Mal_GP_1',convert] = round(mod_params[mod_params$Label == 'L_at_Amin_Mal_GP_1', convert], digits = 0)
@@ -1036,6 +1038,35 @@ mod_params$Min = paste('(', mod_params$Min, ', ', mod_params$Max, ')', sep='')
 mod_params$PR_type = ifelse(mod_params$Pr_type == 'No_prior' , 'None',
                             paste(mod_params$Pr_type,' (', mod_params$Prior, 
                                   ', ', mod_params$Pr_SD, ')', sep = ''))
+
+# Set long value to scientific notation
+mod_params[mod_params$Label == "Wtlen_1_Fem",3] = format(mod_params[mod_params$Label == "Wtlen_1_Fem",3], scientific = TRUE)
+mod_params[mod_params$Label == "Wtlen_1_Mal",3] = format(as.numeric(mod_params[mod_params$Label == "Wtlen_1_Mal",3]), scientific = TRUE)
+mod_params[mod_params$Label == "Eggs_scalar_Fem",3] = format(as.numeric(mod_params[mod_params$Label == "Eggs_scalar_Fem",3]), scientific = TRUE)
+mod_params[mod_params$Label == "L_at_Amax_Mal_GP_1",3] = round(as.numeric(mod_params[mod_params$Label == "L_at_Amax_Mal_GP_1",3]), 4)
+mod_params[mod_params$Label == "VonBert_K_Mal_GP_1",3] = round(as.numeric(mod_params[mod_params$Label == "VonBert_K_Mal_GP_1",3]), 3)
+mod_params[mod_params$Label == "CV_old_Mal_GP_1",3] = round(as.numeric(mod_params[mod_params$Label == "CV_old_Mal_GP_1",3]), 3)
+
+# Convert Q to regular space
+#mod_params[mod_params$Label == "LnQ_base_Fishery(1)",3] = format(exp(mod_params[mod_params$Label == "LnQ_base_Fishery(1)",3]), scientific = TRUE)
+#mod_params[mod_params$Label == "LnQ_base_POP(4)",3] = exp(mod_params[mod_params$Label == "LnQ_base_POP(4)",3])
+#mod_params[mod_params$Label == "LnQ_base_Triennial(5)",3] = exp(mod_params[mod_params$Label == "LnQ_base_Triennial(5)",3])
+#mod_params[mod_params$Label == "LnQ_base_AFSCSlope(6)",3] = exp(mod_params[mod_params$Label == "LnQ_base_AFSCSlope(6)",3])
+#mod_params[mod_params$Label == "LnQ_base_NWFSCSlope(7)",3] = exp(mod_params[mod_params$Label == "LnQ_base_NWFSCSlope(7)",3])
+#mod_params[mod_params$Label == "LnQ_base_NWFSCcombo(8)",3] = exp(mod_params[mod_params$Label == "LnQ_base_NWFSCcombo(8)",3])
+
+# Relabel some paramters
+mod_params[mod_params$Label == "CV_young_Fem_GP_1",2] = "SD_young_Fem_GP_1"
+mod_params[mod_params$Label == "CV_old_Fem_GP_1",2]   = "SD_old_Fem_GP_1"
+mod_params[mod_params$Label == "CV_young_Mal_GP_1",2] = "SD_young_Mal_GP_1"
+mod_params[mod_params$Label == "CV_old_Mal_GP_1",2]   = "SD_old_Mal_GP_1"
+#mod_params[mod_params$Label == "LnQ_base_Fishery(1)",2] = "Q_base_Fishery(1)"
+#mod_params[mod_params$Label == "LnQ_base_POP(4)",2] = "Q_base_POP(4)"
+#mod_params[mod_params$Label == "LnQ_base_Triennial(5)",2] = "Q_base_Triennial(5)"
+#mod_params[mod_params$Label == "LnQ_base_AFSCSlope(6)",2] = "Q_base_AFSC_Slope(6)"
+#mod_params[mod_params$Label == "LnQ_base_NWFSCSlope(7)",2] = "Q_base_NWFSC_Slope(7)"
+#mod_params[mod_params$Label == "LnQ_base_NWFSCcombo(8)",2] = "Q_base_NWFSCcombo(8)"
+
 
 # Remove the max, prior and prior sd columns
 drops = c('Max', 'Prior', 'Pr_type', 'Pr_SD', 'Num')
@@ -1063,7 +1094,7 @@ mod_params.table = xtable(mod_params,
                                           information (mean, SD).'
                                           , sep='')), 
                           label='tab:model_params',
-                          digits = c(0,0,2,0,2,0,2,0))  
+                          digits = c(0,0,3,0,2,0,2,0))  
 
 # Add alignment  
 align(mod_params.table) = c('llrcccll')
