--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -3768,6 +3768,42 @@ perch. \label{fig:index_fits}}
 
 \begin{figure}
 \centering
+\includegraphics{r4ss/plots_mod1/ts7_Spawning_output_with_95_asymptotic_intervals_intervals.png}
+\caption{Estimated time-series of spawning output for Pacific ocean
+perch. \label{fig:ssb}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/ts9_Spawning_depletion_with_95_asymptotic_intervals_intervals.png}
+\caption{Estimated time-series of relative biomass for Pacific ocean
+perch. \label{fig:depl}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}
+\caption{Estimated time-series of recruitment for Pacific ocean perch.
+\label{fig:recuits}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/recdevs2_withbars.png}
+\caption{Estimated time-series of recruitment deviations for Pacific
+ocean perch. \label{fig:recdevs}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_flt1mkt1.png}
 \caption{Length comps, discard, Fishery
 \label{fig:mod1_1_comp_lenfit_flt1mkt1}}
@@ -4366,7 +4402,39 @@ chi\_square distribution.
 
 \FloatBarrier
 
+\begin{figure}
+\centering
+\includegraphics{Figures/ssb_sens1.png}
+\caption{Time-series of spawning output for model sensitivities for
+Pacific ocean perch. \label{fig:sens1_ssb}}
+\end{figure}
+
 \FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/depl_sens1.png}
+\caption{Time-series of relative biomass for model sensitivities for
+Pacific ocean perch. \label{fig:sens1_depl}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/ssb_sens2.png}
+\caption{Time-series of spawning output for model sensitivities for
+Pacific ocean perch. \label{fig:sens2_ssb}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/depl_sens2.png}
+\caption{Time-series of relative biomass for model sensitivities for
+Pacific ocean perch. \label{fig:sens2_depl}}
+\end{figure}
 
 \FloatBarrier
 
